--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,13 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",    
-    "react-router-dom": "5.2.1",
-    "react-scripts": "5.0.0",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "^5.0.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "sass": "^1.48.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
   },
@@ -43,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.2"
   }
 }
