--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,12 @@
   "private": true,
   "proxy": "http://localhost:5000/",
   "dependencies": {
+    "@date-io/date-fns": "^2.13.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/lab": "^5.0.0-alpha.70",
+    "@mui/material": "^5.4.2",
+    "@mui/styles": "^5.4.2",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +18,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.25.0",
+    "date-fns": "^2.28.0",
     "dayjs": "^1.10.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
