--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@date-io/date-fns": "^2.13.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.4.4",
     "@mui/lab": "^5.0.0-alpha.70",
     "@mui/material": "^5.4.2",
     "@mui/styles": "^5.4.2",
