--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,8 @@
     "redux-thunk": "^2.4.1",
     "sass": "^1.48.0",
     "typescript": "^4.5.4",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "xlsx": "^0.18.3"
   },
   "scripts": {
     "start": "react-scripts start",
