--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,11 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.25.0",
+    "chart.js": "^3.7.1",
     "date-fns": "^2.28.0",
     "dayjs": "^1.10.7",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.2.0",
