--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.10.7",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.1.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "5.2.0",
@@ -62,6 +63,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-csv": "^1.1.2",
     "@types/react-router-dom": "^5.3.2"
   }
 }
