--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^3.7.1",
     "date-fns": "^2.28.0",
     "dayjs": "^1.10.7",
+    "face-api.js": "^0.22.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.1.0",
     "react-csv": "^2.2.2",
