--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "sass": "^1.48.0",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3",
+    "write-json-file": "^5.0.0",
     "xlsx": "^0.18.3"
   },
   "scripts": {
